Fix negative spacing

--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -37,23 +37,23 @@ $units: (
 			}
 
 			.margin-negative-#{$name}#{$breakpoint} {
-				margin: - ritmo($value);
+				margin: ritmo(-$value);
 			}
 
 			.margin-negative-top-#{$name}#{$breakpoint} {
-				margin-top: - ritmo($value);
+				margin-top: ritmo(-$value);
 			}
 
 			.margin-negative-bottom-#{$name}#{$breakpoint} {
-				margin-bottom: - ritmo($value);
+				margin-bottom: ritmo(-$value);
 			}
 
 			.margin-negative-left-#{$name}#{$breakpoint} {
-				margin-left: - ritmo($value);
+				margin-left: ritmo(-$value);
 			}
 
 			.margin-negative-right-#{$name}#{$breakpoint} {
-				margin-right: - ritmo($value);
+				margin-right: ritmo(-$value);
 			}
 
 		}
@@ -83,23 +83,23 @@ $units: (
 			}
 
 			.padding-negative-#{$name}#{$breakpoint} {
-				padding: - ritmo($value);
+				padding: ritmo(-$value);
 			}
 
 			.padding-negative-top-#{$name}#{$breakpoint} {
-				padding-top: - ritmo($value);
+				padding-top: ritmo(-$value);
 			}
 
 			.padding-negative-bottom-#{$name}#{$breakpoint} {
-				padding-bottom: - ritmo($value);
+				padding-bottom: ritmo(-$value);
 			}
 
 			.padding-negative-left-#{$name}#{$breakpoint} {
-				padding-left: - ritmo($value);
+				padding-left: ritmo(-$value);
 			}
 
 			.padding-negative-right-#{$name}#{$breakpoint} {
-				padding-right: - ritmo($value);
+				padding-right: ritmo(-$value);
 			}
 
 		}
